--- a/front-end/src/app/contacts/addnew/addnew_contacts.component.scss
+++ b/front-end/src/app/contacts/addnew/addnew_contacts.component.scss
@@ -15,10 +15,13 @@
     margin-bottom: 15px;
     header {
       .header-content {
-        margin-left: 0;
+        /*margin-left: 0;
         display: block;
         margin: 0 auto;
-        width: 98%;
+        width: 98%;*/
+        margin-left: 10px;
+        display: block;
+        width: 20%;
         h1 {
           font-family: sans-serif;
         }
