--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -312,14 +312,14 @@
                 <span class="sr-only">Click here for more information</span>
               </button>
             </label>
-            <div class="file-upload-container border-bottom" *ngIf="file === null">
+            <div class="file-upload-container border-bottom" *ngIf="file === null && fileNameToDisplay === null">
               <input #fileInput type="file" name="file" accept="application/pdf" (change)="setFile($event)" />
             </div>
-            <div class="file-attached-container" *ngIf="file !== null">
+            <div class="file-attached-container" *ngIf="file !== null || fileNameToDisplay !== null">
               <div class="grid-row">
                 <div class="grid-row__col grid-row__col--12">
                   <h5>
-                    {{ file.name }}
+                    {{ file ? file.name : fileNameToDisplay }}
                     <!--<button type="button" class="btn btn-link" (click)="open(deletePDF)">-->
                     <button type="button" class="btn btn-link" (click)="deletePDFFile()">
                     <span vertical-align="top" class="close-icon"></span>
