FNE-1563 Add select on tab to state

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -287,9 +287,15 @@
                     <ng-container *ngIf="col?.type === 'select' && 
                           (isFieldName(col?.name, 'state') ||
                           isFieldName(col?.name, 'cand_office_state'))">
-                      <!-- [searchFn]="customStateSearchFn" -->
-                      <ng-select #stateSelect [items]="states" (change)="handleStateChange($event, col)"
-                        class="forms__select" [formControlName]="col?.name" bindValue="code" bindLabel="code" [ngClass]="
+                      <ng-select #stateSelect 
+                        [items]="states" 
+                        (change)="handleStateChange($event, col)"
+                        class="forms__select" 
+                        [formControlName]="col?.name" 
+                        bindValue="code" 
+                        bindLabel="code" 
+                        [selectOnTab]="true"
+                        [ngClass]="
                             frmIndividualReceipt.get(col?.name)?.invalid &&
                             (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                               ? 'forms__select-error'
