Fixing innerHTML text

--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -260,7 +260,7 @@
                 </button>
               </div>
               <div class="editor full-width-textarea" formControlName="reasonText" contenteditable="true" placeholder="Enter text here..."
-                  role="textarea" (input)="editorChange($event)" (paste)="removeHTML($event)" #htmlEditor> {{editingTextArea ? textAreaTextContent : null}}
+                  role="textarea" (input)="editorChange($event)" (paste)="removeHTML($event)" [innerHTML]="editingTextArea ? textAreaTextContent : null" #htmlEditor>
               </div>
             </div>
           </div>
