--- a/front-end/src/app/app-layout/app-layout.component.scss
+++ b/front-end/src/app/app-layout/app-layout.component.scss
@@ -266,6 +266,7 @@
       float:left;
       width: $footerContactInfoWidth;
       .contact-info__item {
+        font-size: 1.21269rem;
         display: block;
         @include media(tablet) {
           display: block;
