--- a/front-end/src/app/account/account.component.scss
+++ b/front-end/src/app/account/account.component.scss
@@ -6,10 +6,17 @@
 	.grid-row {
 		margin-left: 0;
 		margin-right: 0;
+		
 		.grid-row__col {
 			padding-left: 0;
 			padding-right: 0;			
 		}
+	}
+	.grid-row-btn {
+		margin-left: 0;
+		margin-right: 0;
+		position: relative;
+		
 	}
 	header {    
 	    .header-container {
@@ -34,11 +41,17 @@
 				}
 			}
 
+			.grid-col-1 {
+				position: absolute;
+				right: 0;
+
+			}
+
 			.grid-col {
 				float: none;
 				display: block;
 				max-width: 100%;
-				/*padding-left: 20px;*/
+				padding-left: 20px;
 				width: 100%;				
 				@include media(tablet) {
 					display: block;
