--- a/front-end/src/app/contacts/addnew/addnew_contacts.component.scss
+++ b/front-end/src/app/contacts/addnew/addnew_contacts.component.scss
@@ -106,7 +106,7 @@
             }
             .ng-select-container {
               height: 45px;
-              width: 235px;
+              //width: 350px;
               .ng-input {
                 input[type='text'] {
                   border: none;
@@ -115,7 +115,7 @@
             }
           }
           .ng-dropdown-panel {
-            width: 235px;
+            //width: 350px;
             .ng-dropdown-panel-items {
               .ng-option {
                 &.ng-option-marked {
