--- a/front-end/src/app/reports/reportdetails/reportdetails.component.scss
+++ b/front-end/src/app/reports/reportdetails/reportdetails.component.scss
@@ -217,3 +217,11 @@
       display:none;
     }
   }
+
+  .td-amend {
+    margin-left: auto !important;
+    .amend-arrow {
+      margin-left: 20%;
+      color: #0062cc;
+    }
+  }
