Fne 1064 sprint23 mahendra ver2 (#1227)
* FNE 1482 changes

* FNE 1482 changes

* FNE 1482 changes

* FNE 1482 changes

--- a/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
+++ b/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
@@ -26,6 +26,12 @@
       type="button" 
       (click)="activeModal.close('ReportExist')"
       class="btn btn-primary btn-right"
-    >Show Report</button>     
+    >Show Report</button>    
+    <button *ngIf="isShownewReport"
+        type="button" 
+        (click)="activeModal.close('NewReport')"
+        class="btn btn-primary btn-right"
+        >New Report
+    </button>                
     </div>
   </div>
