Disabling certification checkbox in view mode

--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -261,6 +261,7 @@
               name="agreement"
               value="yes"
               (change)="updateValidation($event)"
+              [attr.disabled]="!editMode ? '' : null"
               formControlName="agreement"
             />
             <label class="agreement__text" for="agreement">
